--- a/style.css
+++ b/style.css
@@ -2,9 +2,12 @@ h1 {
   color:blue;
   font-family:cursive;
   font-size: 45px;
+  text-decoration: underline;
+  background-color: black;
 }
 
-head {
+h2 {
   color:blue;
   font-family: cursive:
+    
     
