--- a/style.css
+++ b/style.css
@@ -9,27 +9,6 @@ h1 {
 body {
   color:blue;
   font-family: cursive;
-  background-color: tan;
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 200px;
-    background-color: #f1f1f1;
-}
-
-li a {
-    display: block;
-    color: #000;
-    padding: 8px 16px;
-    text-decoration: none;
-}
-
-/* Change the link color on hover */
-li a:hover {
-    background-color: #555;
-    color: white;
+  background-color: tan
 }
     
