--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@ h1 {
 }
 
 body {
-  color:black;
+  color:turquoise;
   font-family: cursive;
-  background-color: turquoise;
+  background-color: gray;
 }
 
 img {
